force-app/main/default/objects/phones__x/phones__x.object-meta.xml
<CustomObject>
    <description>phones</description>
    <externalDataSource>Mobile_Devices</externalDataSource>
    <externalName>phones</externalName>
    <label>phones</label>
    <pluralLabel>phones</pluralLabel>
</CustomObject>