force-app/main/default/objects/phones__x/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand</description>
    <externalDeveloperName>Brand</externalDeveloperName>
    <label>Brand</label>
    <length>128</length>
    <type>Text</type>
</CustomField>