force-app/main/default/objects/phones__x/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>UUID</description>
    <externalDeveloperName>UUID</externalDeveloperName>
    <label>UUID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>